src/objects/TR1__External_Search_Junction__c.object
<CustomObject>
    <fields>
        <fullName>TR1__CompositeKey__c</fullName>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__External_Search_Result__c</fullName>
        <label>External Search Result</label>
        <referenceTo>TR1__External_Search_Result__c</referenceTo>
        <relationshipLabel>External Search Junction</relationshipLabel>
        <relationshipName>External_Search_Junction</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__External_Search_Status__c</fullName>
        <label>External Search Status</label>
        <referenceTo>TR1__External_Search_Status__c</referenceTo>
        <relationshipLabel>External Search Junction</relationshipLabel>
        <relationshipName>External_Search_Junction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>External Search Junction</label>
    <nameField>
        <displayFormat>ESJ-{0000000000}</displayFormat>
        <label>External Search Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Search Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>